## Find GoogleTest package
#find_package(GTest REQUIRED)
#include_directories(${GTEST_INCLUDE_DIRS})
#
## Define the test sources
#set(TEST_SOURCES
#        VirtualDiskTest.cpp
#)
#
## Create the test executable
#add_executable(SimpleFileSystemTests ${TEST_SOURCES})
#
## Link the test executable with GoogleTest and the library
#target_link_libraries(SimpleFileSystemTests ${GTEST_LIBRARIES} pthread SimpleFileSystemLib)
